# making-ie-great-again

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  Makefile  README.md  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/models/: schemas.py
backend/prompts/: __init__.py  maduro_metaprompt.py  trump_metaprompt.py
backend/routers/: transform.py  tts.py
backend/services/: llm_service.py  tts_service.py
data/: fal_audio_urls.json  fal_voice_config.json  maduro_transcript.txt  trump_transcript.txt
frontend/: __init__.py  api_client.py  config.py  main.py  router.py  theme.py
frontend/components/: audio_player.py  leader_card.py  nav_bar.py  page_header.py  text_input_panel.py
frontend/pages/: __init__.py  architecture.py  bio_maduro.py  bio_trump.py  home.py
scripts/: run_all.sh  run_backend.sh  run_frontend.sh  transcribe.py  upload_ref_audio.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_full_flow.py  test_home_page.py  test_leader_selection.py  test_navigation.py
tests/integration/: test_transform_api.py  test_tts_api.py
tests/unit/: test_config.py  test_llm_service.py  test_schemas.py  test_tts_service.py
